--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Deploy
         run: |
           bash ./serverless/deploy.sh
+        env:
+          SLS_GEO_LOCATION: no-cn  # 新增：设置地域环境变量
           if [ $? -ne 0 ]; then
             exit 1;
           fi
